objects/Order.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__AvaTaxMessage__c</fullName>
        <description>Displays AvaTax responses or messages.</description>
        <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
        <label>AvaTax Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Entity_Use_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use Code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Invoice_Message__c</fullName>
        <description>Invoice messaging returned by the AvaTax service.</description>
        <inlineHelpText>Invoice messaging returned by the AvaTax service.</inlineHelpText>
        <label>Invoice Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable / Disable seller importer of records.</description>
        <inlineHelpText>Enable / Disable seller importer of records.</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Order_Calculate_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers AvaTax to show the calculated tax.</description>
        <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
        <label>Calculate Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Sales_Tax_Amount__c</fullName>
        <description>Displays the tax amount calculated by AvaTax.</description>
        <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Tax_Calculation_Status__c</fullName>
        <description>Displays the status of the tax.</description>
        <formula>IMAGE( 

CASE(      AVA_SFCPQ__AvaTaxMessage__c      , 

&quot;Tax Amount Is Up To Date&quot;, &quot;/img/msg_icons/confirm24.png&quot;, 

&quot;Automated Tax Calculation Triggered, Please Refresh Your Browser&quot;, &quot;/img/loading24.gif&quot;, 

&quot;Tax Amount is Outdated&quot;, &quot;/img/msg_icons/warning24.png&quot;, 
&quot;&quot;,&quot;&quot;,

&quot;/img/msg_icons/error24.png&quot;), 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the tax.</inlineHelpText>
        <label>Tax Calculation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Status__c</fullName>
        <label>COA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>ContractId</formula>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_ACV__c</fullName>
        <formula>Opportunity.ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_TCV__c</fullName>
        <formula>Opportunity.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Order_Value__c</fullName>
        <formula>IF(
  AND(
    TotalAmount &gt; 0,
    AND(EffectiveDate&lt;=TODAY(), Contract.EndDate&gt;TODAY())
  ),
  ((TotalAmount/((Contract.EndDate+1)-EffectiveDate))*((Contract.EndDate+1)-TODAY())),
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FirstContractedOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. All subsequent contracted subscriptions and assets will be added to the single contract associated to the original contracted order.</description>
        <inlineHelpText>If Contracting Method is set to &quot;Single Contract&quot;, this field references the original contracted order, where the single contract is created from. The field value is set by the system.</inlineHelpText>
        <label>First Contracted Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Single Contracted Orders</relationshipLabel>
        <relationshipName>FirstContractedOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalAmount__c</fullName>
        <description>The total order amount with tax included</description>
        <inlineHelpText>The total order amount with tax included</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <summarizedField>OrderItem.SBQQ__TotalAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>COA_Status__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>